# udev-wait

./: .travis.yml  CMakeLists.txt  README.md
src/: udev-wait.cpp
